Add tpl for only login and fetch users
