# swagger/swagger.yml
@@ -313,232 +313,6 @@ paths:
             $ref: '#/definitions/object'
         "403":
           description: ""
-  /user/forgot_pass:
-    post:
-      tags:
-      - user
-      operationId: UserController.forgot password
-      parameters:
-      - in: body
-        name: body
-        description: forgot password this is send otp on mobile and email
-        required: true
-        schema:
-          $ref: '#/definitions/models.SendOtpData'
-      - in: header
-        name: Authorization
-        description: Bearer YourAccessToken
-        required: true
-        type: string
-      responses:
-        "201":
-          description: ""
-          schema:
-            type: string
-        "403":
-          description: ""
-  /user/register:
-    post:
-      tags:
-      - user
-      operationId: UserController.Insert New User
-      parameters:
-      - in: body
-        name: body
-        description: Insert New User
-        required: true
-        schema:
-          $ref: '#/definitions/models.NewUserRequest'
-      responses:
-        "201":
-          description: ""
-          schema:
-            $ref: '#/definitions/models.Users'
-        "403":
-          description: ""
-  /user/reset_pass:
-    post:
-      tags:
-      - user
-      operationId: UserController.Reset password
-      parameters:
-      - in: body
-        name: body
-        description: reset password
-        required: true
-        schema:
-          $ref: '#/definitions/models.ResetUserPassword'
-      - in: header
-        name: Authorization
-        description: Bearer YourAccessToken
-        required: true
-        type: string
-      responses:
-        "201":
-          description: ""
-          schema:
-            $ref: '#/definitions/models.Users'
-        "403":
-          description: ""
-  /user/reset_pass_otp:
-    post:
-      tags:
-      - user
-      operationId: UserController.verify otp
-      parameters:
-      - in: body
-        name: body
-        description: otp verification for forgot password
-        required: true
-        schema:
-          $ref: '#/definitions/models.ResetUserPasswordOtp'
-      - in: header
-        name: Authorization
-        description: Bearer YourAccessToken
-        required: true
-        type: string
-      responses:
-        "201":
-          description: ""
-          schema:
-            type: string
-        "403":
-          description: ""
-  /user/search:
-    post:
-      tags:
-      - user
-      operationId: UserController.Search User
-      parameters:
-      - in: body
-        name: body
-        description: otp verification for email
-        required: true
-        schema:
-          $ref: '#/definitions/models.SearchRequest'
-      - in: header
-        name: Authorization
-        description: Bearer YourAccessToken
-        required: true
-        type: string
-      responses:
-        "201":
-          description: ""
-          schema:
-            type: string
-        "403":
-          description: ""
-  /user/update:
-    put:
-      tags:
-      - user
-      operationId: UserController.update User
-      parameters:
-      - in: body
-        name: body
-        description: update New User
-        required: true
-        schema:
-          $ref: '#/definitions/models.UpdateUserRequest'
-      - in: header
-        name: Authorization
-        description: Bearer YourAccessToken
-        required: true
-        type: string
-      responses:
-        "201":
-          description: ""
-          schema:
-            $ref: '#/definitions/models.Users'
-        "403":
-          description: ""
-  /user/users:
-    get:
-      tags:
-      - user
-      description: |-
-        get Users
-        <br>
-      operationId: UserController.Get All
-      parameters:
-      - in: header
-        name: Authorization
-        description: Bearer YourAccessToken
-        required: true
-        type: string
-      responses:
-        "200":
-          description: ""
-          schema:
-            $ref: '#/definitions/models.Users'
-        "403":
-          description: ""
-  /user/verified_user:
-    get:
-      tags:
-      - user
-      operationId: UserController.verifid users
-      parameters:
-      - in: header
-        name: Authorization
-        description: Bearer YourAccessToken
-        required: true
-        type: string
-      responses:
-        "201":
-          description: ""
-          schema:
-            type: string
-        "403":
-          description: ""
-  /user/verify_email:
-    post:
-      tags:
-      - user
-      operationId: UserController.verify email
-      parameters:
-      - in: body
-        name: body
-        description: verify email
-        required: true
-        schema:
-          $ref: '#/definitions/models.SendOtpData'
-      - in: header
-        name: Authorization
-        description: Bearer YourAccessToken
-        required: true
-        type: string
-      responses:
-        "201":
-          description: ""
-          schema:
-            type: string
-        "403":
-          description: ""
-  /user/verify_email_otp:
-    post:
-      tags:
-      - user
-      operationId: UserController.verify otp for email
-      parameters:
-      - in: body
-        name: body
-        description: otp verification for email
-        required: true
-        schema:
-          $ref: '#/definitions/models.VerifyEmailOTPRequest'
-      - in: header
-        name: Authorization
-        description: Bearer YourAccessToken
-        required: true
-        type: string
-      responses:
-        "201":
-          description: ""
-          schema:
-            type: string
-        "403":
-          description: ""
 definitions:
   models.GetHomeSettingRequest:
     title: GetHomeSettingRequest
